--- a/movieWindow.xaml
+++ b/movieWindow.xaml
@@ -80,7 +80,7 @@
         </Style>
     </Window.Resources>
     <ScrollViewer x:Name="scrollViewer" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden" Margin="0,0,0,-52" Foreground="{x:Null}" Background="#FF231F20">
-        <Grid x:Name="movieGrid" Background="#FF231F20" Margin="-210,-59,-210,-74" Height="1340" Width="1920">
+        <Grid x:Name="movieGrid" Background="#FF171717" Margin="-210,-59,-210,-74" Height="1340" Width="1920">
             <Grid x:Name="playerGrid" HorizontalAlignment="Center" Height="500" VerticalAlignment="Top" Width="800" Margin="0,200,0,0">
 
 
@@ -119,7 +119,7 @@
             <Label Content="" HorizontalAlignment="Center" Height="49" Margin="0,1283,0,0" VerticalAlignment="Top" Width="264" Foreground="{x:Null}"/>
             <Border x:Name="homeImage" BorderThickness="1" HorizontalAlignment="Left" Height="88" Margin="338,77,0,0" VerticalAlignment="Top" Width="106" CornerRadius="5,5,5,5" MouseLeftButtonUp="homeImage_MouseLeftButtonUp">
                 <Border.Background>
-                    <ImageBrush Stretch="Uniform" ImageSource="/Logo.jpg"/>
+                    <ImageBrush Stretch="Uniform" ImageSource="/Picture1.png"/>
                 </Border.Background>
             </Border>
             
